# MatchbotV2

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
config/: global.yaml
config/providers/: provider_ride_enrollment.yaml
data/samples/: ride_enrollment_real_1k.csv
docs/: aws-setup-guide.md  ecs-implementation.md  glue-implementation.md  snowflake-implementation-plan.md
migrations/: env.py
migrations/versions/: 17dfdd5618cc_baseline_existing_schema_managed_by_.py  ad1d30248bfe_generalize_sasid_to_rilds_id_add_ssn_.py
scripts/: gen_ride_enrollment.py  gen_rilds_reference.py  glue_job.py  lambda_function.py  lambda_function_glue.py  seed_rilds_reference.py  upload_to_s3.sh
snowflake/: README.md  requirements.snowflake.txt  requirements.txt  snowflake.yml
snowflake/ddl/: 00_database_and_schema.sql  01_storage_integration.sql  02_file_format_and_stage.sql  03_provider_folder_map.sql  04_land_and_stage_tables.sql  05_reference_table.sql  06_matched_error_audit_tables.sql  07_procedure_and_task.sql
snowflake/python/: pyproject.toml
snowflake/python/matchbot_snowflake/: __init__.py  cascade_builder.py  config_bridge.py  config_models.py  derive_sql.py  land_sql.py  matcher_registry.py  notify_sql.py  provider_sql.py
snowflake/python/matchbot_snowflake/config/: global.yaml
snowflake/python/matchbot_snowflake/config/providers/: provider_ride_enrollment.yaml
snowflake/python/matchbot_snowflake/export/: __init__.py  export_rilds_reference.py
snowflake/python/matchbot_snowflake/matchers/: __init__.py  deterministic.py
snowflake/python/matchbot_snowflake/procedures/: run_pipeline.py
snowflake/python/tests/: test_bundled_config_in_sync.py  test_cascade_builder.py  test_config_models_parity.py  test_derive_sql_parity.py  test_land_sql.py  test_matcher_registry.py  test_provider_sql_generation.py  test_ragged_row_protection.py
src/matchbot/: __init__.py  cli.py  logging_setup.py
src/matchbot/audit/: __init__.py  metrics.py
src/matchbot/config/: __init__.py  loader.py  models.py  settings.py
src/matchbot/domain/: __init__.py  canonical.py  enums.py
src/matchbot/matching/: __init__.py  base.py  blocking.py  derive.py  deterministic.py  fuzzy.py  standardize.py  vocab.py
src/matchbot/notify/: __init__.py  base.py  factory.py  ses.py
src/matchbot/pipeline/: __init__.py  base.py  canonical.py  cleanse.py  match.py  orchestrator.py  parse.py
src/matchbot/runtime/: __init__.py  base.py  factory.py  fargate.py  glue.py  local.py  snowflake.py
src/matchbot/storage/: __init__.py  base.py  postgres.py  schema.py
tests/: conftest.py  test_config.py  test_fuzzy.py  test_matching.py  test_pipeline_integration.py  test_standardize.py
