[project]
name = "matchbot"
version = "0.1.0"
description = "Multi-provider member-matching ETL pipeline (Polars, config-driven, multi-runtime)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Rhode Island MatchBot Team" }]

# Core runtime dependencies. Deliberately free of any cloud SDK so the
# pipeline core stays portable across Fargate / Glue / Snowflake.
dependencies = [
    "polars>=1.42.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
    "structlog>=26.1.0",
    "typer>=0.26.0",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.0",
    "jellyfish>=1.2.1",
    "fastexcel>=0.20.0",
    "psycopg[binary]>=3.3.4",
    "sqlalchemy>=2.0.51",
    "orjson>=3.11.9",
    "tenacity>=9.1.4",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
# Installed only on the platform that needs it. Keeps the core clean.
aws = ["boto3>=1.43.36"]
snowflake = [
    "snowflake-connector-python>=4.6.0",
    "snowflake-snowpark-python>=1.52.0",
]
fast = [
    "connectorx>=0.4.5",
    "adbc-driver-postgresql>=1.11.0",
]
dev = [
    "faker>=40.23.0",
    "xlsxwriter>=3.2.9",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "mypy>=2.1.0",
    "types-pyyaml>=6.0.0",
    "types-python-dateutil>=2.9.0",
]

[project.scripts]
matchbot = "matchbot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/matchbot"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = [
    "B008",  # typer uses function-call defaults by design
    "N812",  # `import standardize as S` is a deliberate, readable convention
]

[tool.ruff.lint.isort]
known-first-party = ["matchbot"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["jellyfish.*", "rapidfuzz.*", "boto3.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src/matchbot"]
branch = true
