[project]
name = "matchbot-snowflake"
version = "0.1.0"
description = "Snowflake-native demo pipeline for MatchBot — SQL-generation glue only; depends on matchbot for config/matching-chain reuse."
readme = "../../README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Rhode Island MatchBot Team" }]

# Depends on the core matchbot package (config loader/models + pure
# matching-chain-resolution functions) plus Snowflake's own SDKs. This is a
# one-way dependency — matchbot never imports anything from this package,
# keeping the core pipeline cloud-SDK-free. See
# docs/snowflake-implementation-plan.md.
dependencies = [
    "matchbot",
    "snowflake-connector-python>=4.6.0",
    "snowflake-snowpark-python>=1.52.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.uv.sources]
matchbot = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["matchbot_snowflake"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
